I just added a bunch of garbage, it works but the UI is uselses

--- a/index.html
+++ b/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, inital-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content ="ie-edge">
-    <title> First Fitness App</title>
+  <meta charset="UTF-8">
+  <title>Fitness Tracker</title>
 </head>
-
 <body>
-<h1> Hello World</h1>
+  <h1>My Fitness Tracker</h1>
+  <button id="newWorkoutBtn">New Workout</button>
+  <button id="loadWorkoutsBtn">Load Workouts</button>
 
+  <div id="workoutFormContainer"></div>
+  <div id="savedWorkouts"></div>
+
+  <script src="renderer.js"></script>
 </body>
-
-
-
-
-
-
-
-
-
-
 </html>
