--- a/currentworkout.html
+++ b/currentworkout.html
@@ -32,6 +32,8 @@
         </div>
     </div>
 
+    <script src="notifications.js"></script>
+    <script src="index.js"></script>
     <script src="currentWorkoutManager.js"></script>
     <script src="currentworkout.js"></script>
 </body>
