--- a/daymaker.html
+++ b/daymaker.html
@@ -84,7 +84,10 @@
       <span>Progress</span>
     </div>
   </div>
-
+  
+  <script src="notifications.js"></script>
+  <script src="index.js"></script>
   <script src="daymaker.js"></script>
+
 </body>
 </html>
