--- a/workoutbuilder.html
+++ b/workoutbuilder.html
@@ -18,10 +18,10 @@
             <button class="back-btn" id="backButton">← Back to Home</button>
             
             <div class="current-plan">
-                <h2 class="plan-name">Current Plan: <span id="current-plan-name">None</span></h2>
-                <p id="current-plan-details">No workout plan selected</p>
-                <button class="action-btn" id="change-workout-btn">Change Current Workout</button>
-            </div>
+    <h2 class="plan-name">Current Plan: <span id="current-plan-name">None</span></h2>
+    <p id="current-plan-details">No workout plan selected</p>
+    <button class="action-btn" id="change-workout-btn">Change Current Workout</button>
+</div>
             
             <div class="builder-menu">
                 <div class="menu-card" id="day-maker-card">
@@ -60,5 +60,7 @@
     </div>
 
     <script src="workoutbuilder.js"></script>
+    <script src="notifications.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
