--- a/workoutcreator.html
+++ b/workoutcreator.html
@@ -175,5 +175,7 @@
     </div>
 
     <script src="workoutcreator.js"></script>
+    <script src="notifications.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
