this is the work before cursor

--- a/daymaker.html
+++ b/daymaker.html
@@ -79,10 +79,10 @@
       <i>⚙️</i>
       <span>Day Maker</span>
     </div>
-    <div class="nav-item">
-      <i>📈</i>
-      <span>Progress</span>
-    </div>
+    <a href="progressive.html" class="nav-item">
+    <i>⚙️</i>
+    <span>Progressive</span>
+</a>
   </div>
   
   <script src="notifications.js"></script>
