--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <i>📈</i>
             <span>Analytics</span>
         </a>
-        <div class="nav-item">
-            <i>⚙️</i>
-            <span>Exercises</span>
-        </div>
+        <a href="progressive.html" class="nav-item">
+    <i>⚙️</i>
+    <span>Progressive</span>
+</a>
     </div>
 
     <!-- Add this line to reference the external JavaScript file -->
