--- a/workoutbuilder.html
+++ b/workoutbuilder.html
@@ -52,10 +52,10 @@
                 <i>📈</i>
                 <span>Analytics</span>
             </div>
-            <div class="nav-item">
-                <i>⚙️</i>
-                <span>Exercises</span>
-            </div>
+            <a href="progressive.html" class="nav-item">
+    <i>⚙️</i>
+    <span>Progressive</span>
+</a>
         </div>
     </div>
 
