--- a/workoutcreator.html
+++ b/workoutcreator.html
@@ -168,10 +168,10 @@
             <i>📋</i>
             <span>Workout Creator</span>
         </div>
-        <div class="nav-item">
-            <i>📈</i>
-            <span>Progress</span>
-        </div>
+        <a href="progressive.html" class="nav-item">
+    <i>⚙️</i>
+    <span>Progressive</span>
+</a>
     </div>
 
     <script src="workoutcreator.js"></script>
