--- a/analytics.html
+++ b/analytics.html
@@ -74,11 +74,10 @@
             <i>📈</i>
             <span>Analytics</span>
         </a>
-        <div class="nav-item">
-            <i>⚙️</i>
-            <span>Settings</span>
-        </div>
-    </div>
+        <a href="progressive.html" class="nav-item">
+    <i>⚙️</i>
+    <span>Progressive</span>
+</a>
 
     <!-- Chart.js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
