i added some bs. Need to add spreadsheets

--- a/analytics.html
+++ b/analytics.html
@@ -45,6 +45,7 @@
                         <option value="reps">Reps</option>
                         <option value="recovery">Recovery Time (s)</option>
                     </select>
+                    <button class="action-btn btn-secondary" id="generateDemoData" style="margin-left:10px;">Generate Demo Data</button>
                 </div>
 
                 <div class="chart-container">
@@ -83,6 +84,5 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="analytics.js"></script>
     <script src="notifications.js"></script>
-    <script src="index.js"></script>
 </body>
 </html>
