--- a/workoutbuilder.html
+++ b/workoutbuilder.html
@@ -48,10 +48,10 @@
                 <i>🏋️</i>
                 <span>Workout Builder</span>
             </div>
-            <div class="nav-item">
+            <a href="analytics.html" class="nav-item">
                 <i>📈</i>
                 <span>Analytics</span>
-            </div>
+            </a>
             <a href="progressive.html" class="nav-item">
     <i>⚙️</i>
     <span>Progressive</span>
@@ -61,6 +61,6 @@
 
     <script src="workoutbuilder.js"></script>
     <script src="notifications.js"></script>
-    <script src="index.js"></script>
+    
 </body>
 </html>
